src/less/styles.less
body {
  /* background-image: url("images/background.jpg"); */
  min-height: 100vh; /* Required for bottom prefooter to work */
  margin: 0;
  position: relative;
}

/* {
  outline: 1px dotted red;
} */

.main-nav {
  transition: background-color 0.2s ease;
}

main.container {
  margin-top: 2em;
}

.prefooter {
  margin: 3em 0 2em;
}

/* The photos are just way too big, so this limits their size a bit */
.slideshow-container .carousel .carousel-item {
  height: 25rem;
}

/* For contrast reasons, this is a translucent overlay
(but the exact colour is defined elsewhere in theming.less) */
.slideshow-container .carousel .carousel-item::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  /* . . . but we at least establish a default */
  background: rgba(0, 0, 0, 0.8);
}

/* Hopefully you remember this paradigm.
Setting position: relative is just to allow us
to use position: absolute with the children */
.slideshow-container {
  position: relative;
}

/* My favourite form of centering. Vertically and horizontally.
And it's so elegant too! Look at that and tell me it's not super cool. */
.overlay-text {
  width: 100%;
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
}

iframe.soar-video {
  margin: 0 auto;
  width: 400px;
  max-width: 100%;
  height: 300px;
}

.card {
  margin-bottom: 1em;
}

.btn {
  margin-bottom: 0.5rem;
}

.btn ~ .btn {
  margin-left: 0.5rem;
}

a[data-toggle='collapse'] {
  text-decoration: none;
}

a[data-toggle='collapse']::after {
  font-family: 'bootstrap-icons';
  font-size: 0.75em;
}

a[data-toggle='collapse'].collapsed::after {
  content: '\f217'; /* down */
}

a[data-toggle='collapse']::after {
  content: '\f223'; /* down */
}

#gallery-general a {
  margin-top: -15px;
}

.gallery h2 {
  margin-top: 2rem;
}

.accordion a[data-toggle='collapse'] {
  color: inherit;
}

.accordion a[data-toggle='collapse']::after {
  content: '' !important;
}

.faq .accordion {
  margin-bottom: 1em;
}

.faq .card {
  margin: 0;
}

.faq p {
  margin-bottom: 0; /* Necessary to fix the collapse animation stutter */
}

.team .card h5,
.team .card h6,
.team .card p {
  margin: 0; /* It was just kind of too much */
}

.team a:not([role="button"]) {
  font-size: 1.5rem; /* It was just kind of too small (the icons, I mean) */
  display: inline-block;
}

/*
This is a temp fix for the strangest bug I've ever seen.
As you may or may not recall, the collapsers for the team page
are all "connected" when the target is a class. The FAQ has no
issue with this "connectivity" because it only uses IDs.
Truly bizarre. Guess we'll never know.
*/
.team a::after {
  content: '';
  display: none;
}

.team a ~ a {
  margin-left: 0.1em; /* And also the icons were too close together */
}

.team .collapser {
  margin-bottom: 1em;
}

@media screen and (min-width: 576px){
	.team .collapser {
    display: none;
  }

  .team .col-sm-6 {
    display: block;
    /*
    Ensures that large screens always see team cards
    This is mainly a problem with resizing. Without this rule,
    one could shrink their viewport to an xs and hide cards.
    But, upon expanding their viewport, the cards would remain
    hidden with no way of revealing them. A big edge case,
    though it's nice to have accounted for it.
    */
  }
}
@media screen and (max-width: 575.99px){
  /* De-clutter the slideshow a bit on mobile */
  #slideshow .carousel-item {
    height: 18rem;
  }

  /* . . . and of course make the text smaller too. */
  h1[class^='display'], h1[class*=' display'] {
    font-size: 3rem;
  }

  .slideshow-container .lead {
    font-size: 1rem;
  }

  /* We need collapsers on mobile!
  Otherwise users will need to scroll WAY too much */
  .team .collapser {
    display: initial;
  }
}

.apply .tooltip-wrapper {
  /* Ensure the div only wraps the anchor
  (Otherwise the tooltip is weirdly positioned) */
  display: inline-block;
}

ul.contact-list {
  list-style: none;
  padding-left: 0;
}

ul.contact-list li ~ li {
  margin-top: 1em;
}

